--- a/Web.config
+++ b/Web.config
@@ -24,7 +24,7 @@
     
 
         <add key="CGIS_CONNSTR" value="Server=xxxxxx;Database=xxxxxx;User Id=xxxxx;Password=xxxxx;" />		
-		
+        <add key="max_result_count" value="300" />		
 		
 		
 		
